# django-cloudmedia

./: .gitignore  MANIFEST.in  README.md  setup.cfg
cloudmedia/: admin.py  apps.py  models.py
cloudmedia/locale/zh_hans/LC_MESSAGES/: django.mo  django.po
cloudmedia/migrations/: 0001_initial.py
cloudmedia/storage/: cos.py  obs.py  oss.py
