[metadata]
name = django-cloudmedia
version = 1.0.0
description = Cloud media manager for Django, support for aliyun OSS, Tencent COS, Huawei OBS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/twn39/django-cloudmedia
author = twn39
author_email = twn39@163.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.0
    oss2 >= 2.15
    cos-python-sdk-v5 >= 1.9.10
    esdk-obs-python >= 3.21
    Pillow >= 8.4
